# rag

./: .gitignore  .mise.toml  .pre-commit-config.yaml  .trivyignore.yaml  README.md  self-managed-answers.txt
.github/actions/build-and-push/: action.yaml
.github/actions/terraform/: action.yaml
.github/workflows/: lambdas.yaml  main.yaml  terraform.yaml
app/: Dockerfile
app/chunking/: .env.example  README.md  main.py  pyproject.toml
app/embedding/: README.md  docker-compose.yaml  main.py  pyproject.toml
app/pdf-to-text/: .env.example  README.md  main.py  pyproject.toml
app/utils/: README.md
app/utils/utils/: s3.py
apps/: .dockerignore  Dockerfile  docker-compose.yaml
apps/api/: .env.example  Dockerfile  Makefile  README.md  main.py  pyproject.toml  schemas.py  secret.py  settings.py
apps/api/services/: embeddings.py  generation.py  prompting.py  rag.py  retrieval.py
apps/chunking/: main.py  pyproject.toml
apps/embedding/: .env.example  README.md  docker-compose.yaml  main.py  pyproject.toml  secret.py
apps/pdf-to-text/: main.py  pyproject.toml
apps/utils/: pyproject.toml
apps/utils/utils/: env_vars.py
config/dev/: backend.hcl  us-east-1.tfvars
docs/: RAG.drawio
modules/lambda/: README.md  locals.tf  main.tf  outputs.tf  variables.tf  versions.tf
modules/lambda/bootstrap-lambda/: Dockerfile  README.md  main.py  push-to-ecr.sh
src/: .terraform.lock.hcl  README.md  data.tf  locals.tf  main.tf  output.tf  providers.tf  variables.tf  versions.tf
src/machine-definition/: knowledge-base.json
