[project]
name = "chunking"
version = "0.1.0"
description = "Downloads a JSON (Corpus) from S3 and store the chunkings in S3 bucket"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "boto3>=1.42.54",
    "langchain-text-splitters>=1.1.1",
    "python-dotenv>=1.2.1",
    "utils",
]

[tool.uv.sources]
utils = { path = "../utils", editable = true }
