[project]
name = "pdf-to-text"
version = "0.1.0"
description = "Read a PDF from S3, extract it to text format and put it in S3"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "boto3>=1.42.53",
    "pymupdf-layout>=1.27.1",
    "pymupdf4llm>=0.3.4",
    "python-dotenv>=1.2.1",
    "utils",
]

[tool.uv.sources]
utils = { path = "../utils", editable = true }
